[project]
name = "quantum-pixel"
authors = [
    { name="Linos1391", email="linos.coding@gmail.com" },
]
description = "When both YES and NO are existed. Only human with emotions can comprehend."
requires-python = ">=3.14"
dynamic = ["readme", "version"]
dependencies = [
    "fastapi[standard]>=0.128.0",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "stegano>=0.9.7",
]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.14",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Repository = "https://github.com/Linos1391/quantum-pixel.git"
Issues = "https://github.com/Linos1391/quantum-pixel/issues"

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
end-before = "assets/mermaid.png"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
text = "https://github.com/Linos1391/quantum-pixel/blob/master/assets/mermaid.png?raw=true"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"
start-after = "assets/mermaid.png"